# 2

./: .gitignore  README.md
app/: App.tsx  app.json  folder_structure.txt  package-lock.json  package.json
app/android/: settings.gradle
app/android/app/: build.gradle
app/ios/: Podfile
app/ios/SmartTankApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
app/ios/SmartTankApp.xcodeproj/: project.pbxproj
app/src/assets/locales/: en.json  ur.json
app/src/components/common/: Alert.tsx  Button.tsx  Card.tsx
app/src/components/dashboard/: PowerConsumption.tsx  (+6 more)
app/src/config/: api.ts  database.ts  mqtt.ts
app/src/context/: DeviceProvider.tsx
app/src/main/: AndroidManifest.xml
app/src/navigation/: AppNavigator.tsx  AuthNavigator.tsx  MainNavigator.tsx
app/src/store/: index.ts
app/src/utils/: network.ts
esp32/esp32_project/: CMakeLists.txt
esp32/esp32_project/main/: CMakeLists.txt  Kconfig.projbuild  config.h  main.cpp
esp32/esp32_project/main/communication/: BluetoothManager.h  MqttClient.h  WifiManager.h  bluetooth.cpp  mqtt.cpp  wifi.cpp
esp32/esp32_project/main/controls/: PumpControl.h  pump.cpp
esp32/esp32_project/main/sensors/: PowerSensor.h  TdsSensor.cpp  TdsSensor.h  TemperatureSensor.h  WaterFlowSensor.cpp  WaterFlowSensor.h  WaterLevelSensor.h  power.cpp  sensor_data.h  temperature.cpp  water_level.cpp
esp32/esp32_project/main/storage/: DataQueue.h  DataStorage.h  data.cpp  queue.cpp
esp32/esp32_project/main/utils/: calculations.cpp  calculations.h  debug.cpp  debug.h  error_handler.cpp  error_handler.h  test.cpp  test.h
(+46 files in other folders)
